--- a/Css Style Use/Style.css
+++ b/Css Style Use/Style.css
@@ -4,4 +4,13 @@
     box-sizing: border-box;
 }
 
+body{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background: #050505;
+}
+
+
 
