--- a/Css Style Use/Style.css
+++ b/Css Style Use/Style.css
@@ -19,3 +19,12 @@ body{
     transform-style: preserve-3d;
 }
 
+.cube div{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+}
+
