--- a/Css Style Use/Style.css
+++ b/Css Style Use/Style.css
@@ -17,7 +17,10 @@ body{
     width: 300px;
     height: 300px;
     transform-style: preserve-3d;
+    transform: rotateX(-30deg);
+    animation: animate 4s linear infinite;
 }
+
 
 .cube div{
     position: absolute;
@@ -28,3 +31,13 @@ body{
     transform-style: preserve-3d;
 }
 
+.cube div span{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(#151515,#00ec00);
+    transform: rotateY(calc(90deg*var(--i))) translateZ(150px);
+
+}
