--- a/Css Style Use/Style.css
+++ b/Css Style Use/Style.css
@@ -1,10 +1,10 @@
-*{
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
-body{
+body {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -12,7 +12,7 @@ body{
     background: #050505;
 }
 
-.cube{
+.cube {
     position: relative;
     width: 300px;
     height: 300px;
@@ -21,8 +21,17 @@ body{
     animation: animate 4s linear infinite;
 }
 
+@keyframes animate {
 
-.cube div{
+    0% {
+        transform: rotateX(-30deg) rotateY(0deg);
+    }
+    100% {
+        transform: rotateX(-30deg) rotateY(360deg);
+    }
+}
+
+.cube div {
     position: absolute;
     top: 0;
     left: 0;
@@ -31,13 +40,13 @@ body{
     transform-style: preserve-3d;
 }
 
-.cube div span{
+.cube div span {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(#151515,#00ec00);
-    transform: rotateY(calc(90deg*var(--i))) translateZ(150px);
+    background: linear-gradient(#151515, #00ec00);
+    transform: rotateY(calc(90deg * var(--i))) translateZ(150px);
 
 }
