--- a/Css Style Use/Style.css
+++ b/Css Style Use/Style.css
@@ -51,3 +51,13 @@ body {
 
 }
 
+.top{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 300px;
+    height: 300px;
+    background: #222;
+    transform: rotateX(90deg) translateZ(150px);
+}
+
