--- a/Css Style Use/Style.css
+++ b/Css Style Use/Style.css
@@ -61,3 +61,12 @@ body {
     transform: rotateX(90deg) translateZ(150px);
 }
 
+.top ::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 300px;
+    height: 300px;
+}
+
