--- a/Css Style Use/Style.css
+++ b/Css Style Use/Style.css
@@ -61,12 +61,20 @@ body {
     transform: rotateX(90deg) translateZ(150px);
 }
 
-.top ::before{
-    content: "";
+.top::before{
+    content: '';
     position: absolute;
     top: 0;
     left: 0;
     width: 300px;
     height: 300px;
+    background: #0f0;
+    transform: translateZ(-300px);
+    filter: blur(20px);
+    box-shadow: 0 0 120px rgba(0,255,0,0.2),
+    0 0 200px rgba(0,255,0,0.4),
+    0 0 300px rgba(0,255,0,0.6),
+    0 0 400px rgba(0,255,0,0.8),
+    0 0 500px rgba(0,255,0,0.1)
 }
 
