--- a/Css Style Use/Style.css
+++ b/Css Style Use/Style.css
@@ -88,4 +88,20 @@ main>section:nth-child(1){
     0 0 500px rgba(0,255,0,0.1)
 }
 
+/*-=====================================================*/
+main>section:nth-child(2){
+    position: absolute;
+    left: 75px;
+    top: 88px;
+}
+
+
+
+
+
+
+
+
+
+
 
