--- a/Css Style Use/Style.css
+++ b/Css Style Use/Style.css
@@ -95,7 +95,14 @@ main>section:nth-child(2){
     top: 88px;
 }
 
-
+.cube2 {
+    position: relative;
+    width: 280px;
+    height: 280px;
+    transform-style: preserve-3d;
+    transform: rotateX(-30deg);
+    animation: animate2 4s linear infinite;
+}
 
 
 
