--- a/Css Style Use/Style.css
+++ b/Css Style Use/Style.css
@@ -104,7 +104,15 @@ main>section:nth-child(2){
     animation: animate2 4s linear infinite;
 }
 
+@keyframes animate2 {
 
+    0% {
+        transform: rotateX(-30deg) rotateY(0deg);
+    }
+    100% {
+        transform: rotateX(-30deg) rotateY(360deg);
+    }
+}
 
 
 
