--- a/Css Style Use/Style.css
+++ b/Css Style Use/Style.css
@@ -114,6 +114,14 @@ main>section:nth-child(2){
     }
 }
 
+.cube2 div {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+}
 
 
 
