--- a/Css Style Use/Style.css
+++ b/Css Style Use/Style.css
@@ -134,6 +134,15 @@ main>section:nth-child(2){
 
 }
 
+.top2{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 300px;
+    height: 300px;
+    background: #222;
+    transform: rotateX(90deg) translateZ(150px);
+}
 
 
 
