--- a/Css Style Use/Style.css
+++ b/Css Style Use/Style.css
@@ -188,6 +188,14 @@ main>section:nth-child(3){
     }
 }
 
+.cube3 div {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform-style: preserve-3d;
+}
 
 
 
