--- a/Css Style Use/Style.css
+++ b/Css Style Use/Style.css
@@ -197,7 +197,16 @@ main>section:nth-child(3){
     transform-style: preserve-3d;
 }
 
+.cube3 div span {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(#151515, #00ec00);
+    transform: rotateY(calc(90deg * var(--i))) translateZ(150px);
 
+}
 
 
 
