--- a/Css Style Use/Style.css
+++ b/Css Style Use/Style.css
@@ -218,3 +218,19 @@ main>section:nth-child(3){
     transform: rotateX(90deg) translateZ(150px);
 }
 
+.top3::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 300px;
+    height: 300px;
+    background: #0f0;
+    transform: translateZ(-300px);
+    filter: blur(20px);
+    box-shadow: 0 0 120px rgba(0,255,0,0.2),
+    0 0 200px rgba(0,255,0,0.4),
+    0 0 300px rgba(0,255,0,0.6),
+    0 0 400px rgba(0,255,0,0.8),
+    0 0 500px rgba(0,255,0,0.1)
+}
