--- a/Css Style Use/Style.css
+++ b/Css Style Use/Style.css
@@ -129,7 +129,7 @@ main>section:nth-child(2){
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(#151515, #00ec00);
+    background: linear-gradient(#151515, #0096FF);
     transform: rotateY(calc(90deg * var(--i))) translateZ(150px);
 
 }
@@ -151,14 +151,14 @@ main>section:nth-child(2){
     left: 0;
     width: 300px;
     height: 300px;
-    background: #0f0;
+    background: #0096FF;
     transform: translateZ(-300px);
     filter: blur(20px);
-    box-shadow: 0 0 120px rgba(0,255,0,0.2),
-    0 0 200px rgba(0,255,0,0.4),
-    0 0 300px rgba(0,255,0,0.6),
-    0 0 400px rgba(0,255,0,0.8),
-    0 0 500px rgba(0,255,0,0.1)
+    box-shadow: 0 0 200px rgb(0, 150, 255),
+    0 0 200px rgb(0, 150, 255),
+    0 0 300px rgb(0, 150, 255),
+    0 0 300px rgb(0, 150, 255),
+    0 0 300px rgb(0, 150, 255)
 }
 
 
@@ -203,7 +203,7 @@ main>section:nth-child(3){
     left: 0;
     width: 100%;
     height: 100%;
-    background: linear-gradient(#151515, #00ec00);
+    background: linear-gradient(#151515,red);
     transform: rotateY(calc(90deg * var(--i))) translateZ(150px);
 
 }
@@ -225,12 +225,12 @@ main>section:nth-child(3){
     left: 0;
     width: 300px;
     height: 300px;
-    background: #0f0;
+    background: red;
     transform: translateZ(-300px);
     filter: blur(20px);
-    box-shadow: 0 0 120px rgba(0,255,0,0.2),
-    0 0 200px rgba(0,255,0,0.4),
-    0 0 300px rgba(0,255,0,0.6),
-    0 0 400px rgba(0,255,0,0.8),
-    0 0 500px rgba(0,255,0,0.1)
+    box-shadow: 0 0 200px rgb(255, 77, 65),
+    0 0 200px rgb(255, 77, 65),
+    0 0 200px rgb(255, 77, 65),
+    0 0 200px rgb(255, 77, 65),
+    0 0 200px rgb(255, 77, 65)
 }
