--- a/Css Style Use/Style.css
+++ b/Css Style Use/Style.css
@@ -16,6 +16,7 @@ main {
 }
 
 main>section:nth-child(1){
+    background-color: white;
     position: absolute;
     left: 40%;
     top: 44%;
@@ -90,8 +91,9 @@ main>section:nth-child(1){
 
 /*-=====================================================*/
 main>section:nth-child(2){
+    background-color: white;
     position: absolute;
-    left: 75px;
+    left: 125px;
     top: 88px;
 }
 
@@ -154,18 +156,19 @@ main>section:nth-child(2){
     background: #0096FF;
     transform: translateZ(-300px);
     filter: blur(20px);
-    box-shadow: 0 0 200px rgb(0, 150, 255),
-    0 0 200px rgb(0, 150, 255),
-    0 0 300px rgb(0, 150, 255),
-    0 0 300px rgb(0, 150, 255),
-    0 0 300px rgb(0, 150, 255)
+    box-shadow: 0 0 200px rgba(0, 150, 255,0.2),
+    0 0 200px rgba(0, 150, 255,0.4),
+    0 0 300px rgba(0, 150, 255,0.6),
+    0 0 300px rgba(0, 150, 255,0.8),
+    0 0 300px rgba(0, 150, 255,0.1)
 }
 
 
 /*-=====================================================*/
 main>section:nth-child(3){
+    background-color: white;
     position: absolute;
-    right: 75px;
+    right: 125px;
     top: 88px;
 }
 
@@ -228,9 +231,9 @@ main>section:nth-child(3){
     background: red;
     transform: translateZ(-300px);
     filter: blur(20px);
-    box-shadow: 0 0 200px rgb(255, 77, 65),
-    0 0 200px rgb(255, 77, 65),
-    0 0 200px rgb(255, 77, 65),
-    0 0 200px rgb(255, 77, 65),
-    0 0 200px rgb(255, 77, 65)
+    box-shadow: 0 0 200px rgba(255, 77, 65,0.2),
+    0 0 200px rgba(255, 77, 65,0.4),
+    0 0 200px rgba(255, 77, 65,0.6),
+    0 0 200px rgba(255, 77, 65,0.8),
+    0 0 200px rgba(255, 77, 65,0.1)
 }
